# pyhi

./: .coverage  .gitignore  CLAUDE.md  CONFIG.md  LICENSE.md  README.md  ROADMAP.md  SOAPCALLS.tct  config.py  config.yaml  diff.txt  download_assets.py  main.py  pyproject.toml  requirements-test.txt  requirements.txt  setup.py  ssh-sniff.sh  test-errors.txt  test-results.txt  test.txt  test_mcp.py  test_train_mcp.py  tests-output.txt  tests.txt
.github/: copilot-instructions.md
.github/workflows/: test.yml  tests.yml
docs/: Function calling.md  LDBWS Documentation.md  eg-weath.py  eg-weather.py  live-departures.md  openapi.yaml  rail-example.py  train-mcp-comparison.md
scripts/: list_keywords.py  raspberry-pi-init.sh  test_bluetooth.py
src/: __init__.py  _config-mac.py  _config-raspberry-pi.py  api.py  app.py  audio.py  config.py  function_manager.py  function_tester.py  mcp_manager.py  wake_word.py
src/assets/: Hey-Chat_en_mac_v3_0_0.ppn  Hey-Chat_en_raspberry-pi_v3_0_0.ppn  bing.m4a
src/audio/: analyzer.py  player.py  recorder.py
src/conversation/: ai_client.py  claude_client.py  manager.py  openai_client.py
src/functions/: __init__.py  datetime_utils.py  ideas.txt
src/mcp_servers/: __init__.py
src/triggers/: __init__.py  base.py  bluetooth.py  manager.py  wake_word.py
src/utils/: audio_setup.py  list_devices.py  types.py
src/wake_word/: detector.py
src/word_detection/: detector.py
tests/: conftest.py  test_app.py  test_audio.py  test_config.py  test_conversation.py  test_mcp.py  test_utils.py  test_wake_word.py  test_word_detection.py
(+38 files in other folders)
