[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-assistant"
version = "0.1.0"
description = "A voice assistant using OpenAI's APIs"
requires-python = ">=3.9"
authors = [
    {name = "Voice Assistant Team"}
]
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=0.19.0",
    "pyaudio>=0.2.11",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
test = [
    "pytest>=6.2.5",
    "pytest-mock>=3.6.1",
]

[project.scripts]
voice-assistant = "src.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
namespaces = false 