[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-assistant"
version = "0.1.0"
description = "A voice assistant using OpenAI's APIs"
requires-python = ">=3.9"
authors = [
    {name = "Voice Assistant Team"}
]
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=0.19.0",
    "pyaudio>=0.2.11",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
voice-assistant = "src.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
namespaces = false

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"